<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

  <TextView
        android:id="@+id/record_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_heading"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        app:layout_constraintTop_toTopOf="parent"
    />

  <TextView
        android:id="@+id/instruction_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/record_body"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintTop_toBottomOf="@id/record_heading"
    />

  <Button
        android:id="@+id/button_start_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/record_button"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/primary_blue_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
