<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

  <TextView
        android:id="@+id/record_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recording_heading"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        app:layout_constraintTop_toTopOf="parent"
    />

  <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:indicatorColor="@color/primary_blue_40"
        app:layout_constraintTop_toBottomOf="@id/record_heading"
    />

  <TextView
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0 sec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress"
    />

  <TextView
        android:id="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5 sec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress"
    />

  <Button
        android:id="@+id/button_review"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_button_text"
        android:textColor="@color/primary_blue_40"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_time"
    />

  <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/record_heading"
        app:indicatorColor="@color/white"
        app:trackColor="@color/primary_blue_40"
    />

  <Button
        android:id="@+id/button_cancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel_button_text"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/primary_blue_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
    />

  <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submit_button_text"
        android:backgroundTint="@color/primary_blue_40"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
