<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
>

  <TextView
        android:id="@+id/instruction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Instructions"
    />

  <TextView
        android:id="@+id/instruction_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="20dp"
        android:text="@string/instruction_heading"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintTop_toBottomOf="@id/instruction_title"
    />

  <LinearLayout
        android:id="@+id/instruction1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="6dp"
        app:layout_constraintTop_toBottomOf="@id/instruction_heading"
    >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="1"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/primary_blue_40"
        />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:text="@string/instruction_body_1"
            android:textAppearance="?attr/textAppearanceBodyLarge"
        />
  </LinearLayout>

  <LinearLayout
        android:id="@+id/instruction2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="6dp"
        app:layout_constraintTop_toBottomOf="@id/instruction1_layout"
    >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="2"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/primary_blue_40"
        />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:text="@string/instruction_body_2"
            android:textAppearance="?attr/textAppearanceBodyLarge"
        />
  </LinearLayout>

  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="6dp"
        app:layout_constraintTop_toBottomOf="@id/instruction2_layout"
    >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="3"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/primary_blue_40"
        />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:text="@string/instruction_body_3"
            android:textAppearance="?attr/textAppearanceBodyLarge"
        />
  </LinearLayout>

  <Button
        android:id="@+id/button_get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/get_started_button_text"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/primary_blue_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
